--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@
     width:100vw;
     height:100vh;
     color: var(--colorLight2);
-    background-color: black;
+    overflow-y: scroll;
+    background: linear-gradient(to bottom, #4e54c8, #8f94fb);
 
 }
 
@@ -157,7 +158,7 @@ h1 {
 .parameter{
     width:30%;
     max-width:200px;
-    background-color: rgba(219, 226, 239, 0.5);;
+    background-color: rgba(9, 11, 15, 0.5);;
     border-radius: 5px;
     padding:1rem;
     display: flex;
@@ -165,7 +166,12 @@ h1 {
     gap:5px 0;
     /* justify-content: space-between; */
     align-items: center; 
-}   
+    transition: box-shadow 0.3s ease;
+} 
+.parameter:hover{
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+
+}  
 
 .parameter img{
     width:50px;
@@ -225,3 +231,42 @@ h1 {
     border-radius: 100%;
     margin-bottom:1px;
 }
+
+
+@media (max-width: 760px) {
+    .parameter-container {
+      flex-direction: column;
+      align-items: center; /* This centers the items horizontally within the column */
+      margin-top: 2rem;
+    }
+    
+    .parameter {
+      width: 80%; /* Adjust the width for mobile view */
+      max-width: none; /* Remove the maximum width on mobile */
+    }
+  }
+  
+  .error-container {
+    display: none; /* Initially hide the error container */
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+    background-color: #f8d7da; /* Background color for the error container */
+    border: 1px solid #f5c6cb;
+    border-radius: 5px;
+    margin-top: 20px;
+  }
+  
+  .error-image {
+    max-width: 100px;
+    height: auto;
+  }
+  
+  .error-message {
+    font-size: 18px;
+    font-weight: bold;
+    color: #721c24; /* Text color for the error message */
+    margin-top: 10px;
+  }
+  
